--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "lie": "^3.0.1",
-    "superagent": "^1.3.0"
+    "superagent": "^3.4.1"
   },
   "devDependencies": {
     "chai": "^3.4.0",
@@ -32,6 +32,7 @@
     "coveralls": "^2.11.4",
     "eslint": "^1.7.3",
     "eslint-config-brightspace": "0.0.3",
+    "eslint-plugin-react": "^3.5.0",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "nock": "^2.15.0",
