--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,11 @@ jobs:
         with:
           node-version-file: .nvmrc
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install @web/test-runner-playwright --no-save
+          npx playwright install-deps
       - name: Lint (JavaScript)
-        run: npm run check-style
-      - name: Unit Tests
-        run: npm run test-unit
+        run: npm run lint
+      - name: Unit Tests (cross-browser)
+        run: npx web-test-runner --files ./test/**/*.test.js --node-resolve --playwright --browsers chromium firefox webkit
