--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint . --ext .js",
     "test": "npm run lint && npm run test:headless",
-    "test:headless": "web-test-runner --files ./test/**/*.test.js --node-resolve"
+    "test:headless": "web-test-runner --files \"./test/**/*.test.js\" --node-resolve"
   },
   "repository": {
     "type": "git",
